--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,18 +14,18 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.3.0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^6.0.1
+  provider: ^5.0.0
+  intl: ^0.15.8
+  http: ^0.12.0+2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  intl: ^0.17.0
-  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
